fix: social icon spacing

--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ right: 22px;
     display: grid;
     grid-template-columns: 74px 74px;
     grid-template-rows: 74px 74px;
-    gap: 10px;
+    gap: 20px;
     justify-content: center;
     align-items: center;
     justify-items: center;
